# em27-retrieval-pipeline

./: .gitattributes  .gitignore  .gitmodules  .prettierignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  analyze_flags.py  cli.py  cli.sh  config.default.json  config.example.json  config.py  config_setup.template.yml  dockerfile_postgres  download_profiles_main.py  download_vertical_profiles.py  export-cli-reference.py  fetch-location-data.py  fetch_data.py  generate-retrieval-state-report.py  generate_dataset_main.py  install.sh  main.py  manual-queue.example.json  print_data_report.py  print_processing_queue.py  pyproject.toml  run-automatic.py  run-retrieval.py  run.py  run_automated_proffast.py  run_automatic.py  test.sh  upload_request.sh
.github/: pull_request_template.md
archive/: README.md  automated-proffast-pylot-readme.md  print_processing_queue.py  tarball_raw_outputs.py
archive/fill-retrieval-database/: README.md  main.py  pyproject.toml
archive/fill-retrieval-database/config/: config-template.json
archive/fill-retrieval-database/src/: cache_manager.py  sql_manager.py
archive/retrieval-state-report/: README.md  pyproject.toml
archive/retrieval-state-report/src/: __init__.py  util.py
archive/retrieval-state-report/src/report_builder/: svg_builder.py
archive/retrieval-state-report/src/report_generator/: station_data_generator.py
archive/retrieval-state-report/src/reporting_config/: config.py
automated-proffast-pylot/: .gitattributes  .gitignore  README.md  bundle_output_data.py  print-processing-queue.py  print_processing_queue.py  pyproject.toml  run_container.py
cli/: main.py  utils.py
config/: .env.example  calibration_factors.template.json  config-template.properties  config.default.json  config.example.json  config.properties  config.template.json  evdc_metadata.template.json  manual-queue.example.json
data/: csv-header-example.csv  csv-header-template.csv  inversion-header-example.csv  inversion-header-template.csv
docs/: .env.example  .gitignore  .prettierignore  README.md  architecture.excalidraw  astro.config.mjs  bun.lockb  example-out.csv  ma20200101.map  ma20200101.mod  new-architecture.excalidraw  next.config.js  next.config.mjs  package-lock.json  package.json  postcss.config.js  style.css  tailwind.config.js  tailwind.config.mjs  theme.config.jsx  tsconfig.json  workshop.md
docs-images/: new-architecture.excalidraw
download-vertical-profiles/: .gitignore  config.template.json
example/: example-config-template.yml  main.py  mc-pylot-config.yml  run.sh
extract-retrieval-data/: .gitignore  README.md  analyze_flags.py  config.template.json  pyproject.toml  run.py  run_automatic.py  save.py
extract-retrieval-data/.github/workflows/: continuous-integration.yml  continuous_integration.yml
extract-retrieval-data/config/: config.template.json
extract-retrieval-data/data/: csv-header-template.csv
extract-retrieval-data/docs/: workshop.md
extract-retrieval-data/scripts/: README.md  calculate_linear_best_fit.py  check_static_types.sh  migrate_location_name.py  pandas_playground.py
extract-retrieval-data/src/: __init__.py  main.py  query_list.py  script_1_generate_dataframes.py  script_2_export_to_files.py
extract-retrieval-data/src/custom_types/: __init__.py  campaign.py  campaign_station.py  config.py  configuration.py  location.py  sensor.py  station.py  validators.py
extract-retrieval-data/src/custom_types/location_data_types/: __init__.py  campaign.py  location.py  sensor.py
extract-retrieval-data/src/dataframe_processing/: airmass_correction.py  calibration.py  physical_filter.py  statistical_filter.py  utility_functions.py
extract-retrieval-data/src/procedures/: __init__.py  build_query_list.py  dataframe.py  get_campaign_data.py  get_location_data.py  location_data.py  read_from_database.py  sensor_set.py
extract-retrieval-data/src/utils/: __init__.py  async_get_git_urls.py  constants.py  functions.py  load_config.py  network.py  query_pg_database.py
fill-retrieval-database/: .gitignore  README.md  main.py  pyproject.toml
fill-retrieval-database/config/: config-template.properties
fill-retrieval-database/scripts/: init_db.sql
fill-retrieval-database/src/: __init__.py  cache_manager.py  config.py  csv_iterator.py  csv_processor.py  directory_manager.py  sql_manager.py
logs/: README.md
merge-retrieval-data/: README.md  merge_retrieval_data.py  pyproject.toml
paper/: .gitignore  paper.bib  paper.md  render.sh
retrieval-state-report/: .gitignore  README.md  main.py  pyproject.toml
retrieval-state-report/config/: config-template.json  config.json
retrieval-state-report/src/: __init__.py
retrieval-state-report/src/report_builder/: __init__.py  abs_report_builder.py  csv_builder.py  svg_builder.py
retrieval-state-report/src/report_generator/: __init__.py  abs_report_generator.py  station_data_generator.py  summary_data_generator.py
retrieval-state-report/src/reporting_config/: config.py
scripts/: add-days-without-outputs-to-queue.py  add-failed-days-to-queue.py  add-large-gap-nans.py  check_static_types.sh  compare_commit_hashes.sh  compare_json_files.py  compile-proffast.sh  dir-subset-comparison.py  export_config_schema.py  fetch-location-data.py  install-with-proffast-2.0.sh  install-with-proffast-2.1.sh  install.sh  plot_merged_outputs.py  plotting_utils.py  print_processing_queue.py  run-static-type-analysis.sh  utils.py
src/: __init__.py  bundle_output_data.py  cache_manager.py  cli.py  config.py  csv_iterator.py  csv_processor.py  data_point.py  directory_manager.py  download_atmospheric_profiles.py  download_file.py  download_profiles.py  download_vertical_profiles.py  export_outputs.py  export_retrieval_outputs.py  export_to_files.py  generate_dataframes.py  load_config.py  main.py  merge_retrieval_outputs.py  print_processing_queue.py  process_tar_file.py  pylot_1_0_config_template.yml  pylot_config_template.yml  pylot_datalogger_format.yml  query.py  query_list.py  query_process.py  report_generator.py  run_automated_proffast.py  (+20 more)
(+1163 files in other folders)
