[project]
name = "em27-retrieval-pipeline"
version = "1.0.0"
description = "automated EM27 data processing"
authors = [
    { name = "Moritz Makowski", email = "moritz.makowski@tum.de" },
    { name = "Marlon Müller", email = "marlon.mueller@tum.de" },
    { name = "Andreas Luther", email = "andreas.luther@tum.de" },
    { name = "Vyas Giridhard", email = "vyas.giridharan@tum.de" },
]
dependencies = [
    "filelock>=3.13.1",
    "pydantic>=2.5.3",
    "em27-metadata>=1.0.1",
    "tum-esm-utils>=1.8.3",
    "skyfield>=1.47",        # used by the retrieval
    "rich>=13.7.0",          # used by export and profiles download
    "click>=8.1.7",          # used by CLI
    "scipy>=1.11.4",         # used by export (interpolation)
    "polars>=0.20.5",        # used by export
    "numpy>=1.26.3",         # used by Proffast Pylot only
    "tqdm>=4.66.1",          # used by Proffast Pylot only
    "pandas>=2.2.0",         # used by Proffast Pylot only
    "pytz>=2023.3.post1",    # used by Proffast Pylot only
    "timezonefinder>=6.2.0", # used by Proffast Pylot only
    "pyyaml>=6.0.1",         # used by Proffast Pylot only
    "fortranformat>=2.0.0",  # used by Proffast Pylot only
]
requires-python = "==3.11.*"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
repository = "https://github.com/tum-esm/em27-retrieval-pipeline"
documentation = "https://em27-retrieval-pipeline.netlify.app"

[project.optional-dependencies]
dev = [
    "requests>=2.31.0",
    "jsonref>=1.1.0",
    "pytest>=7.4.4",
    "types-requests>=2.31.0.20240106",
    "pytest-cov>=4.1.0",
    "python-dotenv>=1.0.1",
    "mypy>=1.8.0",
    "tailwind-colors>=1.2.1",
    "pytest-order>=1.2.0",
    "yapf>=0.40.2",
]

[tool.pdm]
distribution = false

# using pytest markers from the `pytest-order` library, we run the
# quick tests before the retrieval tests to fail fast
[tool.pytest.ini_options]
markers = [
    "integration: can only be run on a configured system",
    "quick: can be run in a CI environment, < 30 seconds, everything except running actual retrievals",
    "ci: can be run in a CI environment, ~ 3 min, run the complete tests but without running the actual retrieval algorithms",
    "complete: can be run in a CI environment, ~ 10 - 20 minutes, runs three sample days from different instruments and locations for every retrieval algorithm and every atmospheric profile",
]

[tool.mypy]
strict = true
implicit_reexport = true
plugins = ["pydantic.mypy"]

[tool.yapf]
based_on_style = "facebook"
coalesce_brackets = true
split_before_dict_set_generator = true
each_dict_entry_on_separate_line = false
spaces_around_subscript_colon = true

[[tool.mypy.overrides]]
module = [
    "src.prfpylot.prfpylot.pylot",
    "scipy",
    "scipy.signal",
    "polars",
    "matplotlib.*",
    "skyfield.*",
]
ignore_missing_imports = true
