[project]
name = "em27-retrieval-pipeline"
version = "1.2.1"
description = "automated EM27 data processing"
authors = [
    { name = "Moritz Makowski", email = "moritz.makowski@tum.de" },
    { name = "Marlon Müller", email = "marlon.mueller@tum.de" },
    { name = "Andreas Luther", email = "andreas.luther@tum.de" },
    { name = "Vyas Giridhard", email = "vyas.giridharan@tum.de" },
]
dependencies = [
    "filelock>=3.13.4",
    "pydantic>=2.7.0",
    "em27-metadata>=1.0.1",
    "tum-esm-utils>=2.1.0",
    "skyfield>=1.48",        # used by the retrieval
    "rich>=13.7.1",          # used by export and profiles download
    "click>=8.1.7",          # used by CLI
    "scipy>=1.13.0",         # used by export (interpolation)
    "polars>=0.20.19",       # used by export
    "numpy>=1.26.4",         # used by Proffast Pylot only
    "tqdm>=4.66.2",          # used by Proffast Pylot only
    "pandas>=2.2.2",         # used by Proffast Pylot only
    "pytz>=2024.1",          # used by Proffast Pylot only
    "timezonefinder>=6.5.0", # used by Proffast Pylot only
    "pyyaml>=6.0.1",         # used by Proffast Pylot only
    "fortranformat>=2.0.0",  # used by Proffast Pylot only
    "tomli>=2.0.1",
]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = { text = "GPL-3.0" }

[project.urls]
repository = "https://github.com/tum-esm/em27-retrieval-pipeline"
documentation = "https://em27-retrieval-pipeline.netlify.app"

[project.optional-dependencies]
dev = [
    "requests>=2.31.0",
    "jsonref>=1.1.0",
    "pytest>=8.1.1",
    "types-requests>=2.31.0.20240406",
    "pytest-cov>=5.0.0",
    "python-dotenv>=1.0.1",
    "mypy>=1.9.0",
    "tailwind-colors>=1.2.1",
    "pytest-order>=1.2.1",
    "yapf>=0.40.2",
]

[tool.pdm]
distribution = false

# using pytest markers from the `pytest-order` library, we run the
# quick tests before the retrieval tests to fail fast
[tool.pytest.ini_options]
markers = [
    "integration: can only be run on a configured system",
    "quick: can be run in a CI environment, < 30 seconds, everything except running actual retrievals",
    "ci: can be run in a CI environment, ~ 3 min, run the complete tests but without running the actual retrieval algorithms",
    "complete: can be run in a CI environment, ~ 10 - 20 minutes, runs three sample days from different instruments and locations for every retrieval algorithm and every atmospheric profile",
]

[tool.mypy]
strict = true
implicit_reexport = true
warn_unused_ignores = false
plugins = ["pydantic.mypy"]

[tool.yapf]
based_on_style = "facebook"
coalesce_brackets = true
split_before_dict_set_generator = true
each_dict_entry_on_separate_line = false
spaces_around_subscript_colon = true

[[tool.mypy.overrides]]
module = [
    "src.prfpylot.prfpylot.pylot",
    "scipy",
    "scipy.signal",
    "polars",
    "matplotlib.*",
    "skyfield.*",
]
ignore_missing_imports = true
