[tool.poetry]
name = "extract-retrieval-data"
version = "0.1.0"
description = ""
authors = ["Marlon Mueller <marlon.mueller@tum.de>","Moritz Makowski <moritz.makowski@tum.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
filelock = "^3.8.0"
pandas = "^1.5.2"
types-requests = "^2.28.11.5"
pydantic = "^1.10.2"
psycopg = {extras = ["binary"], version = "^3.1.4"}
httpx = "^0.23.1"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 95

[tool.mypy]
strict = true
implicit_reexport = true