[tool.poetry]
name = "extract-retrieval-data"
version = "0.2.0"
description = "Generates CSV files containing post-processed concentration time series."
authors = [
    "Marlon Mueller <marlon.mueller@tum.de>",
    "Moritz Makowski <moritz.makowski@tum.de>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.1"
pydantic = "^1.10.2"
requests = "^2.28.1"
psycopg = {extras = ["binary"], version = "^3.1.4"}
pandas = "^1.5.2"
rich = "^12.6.0"
scipy = "^1.10.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
mypy = "^0.991"
types-requests = "^2.28.11.5"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pandas-stubs = {version = "^1.5.2.221213", python = ">=3.10,<3.12"}

[tool.black]
line-length = 100

[tool.mypy]
strict = true
implicit_reexport = true