[tool.poetry]
name = "fill-retrieval-database"
version = "0.2.0"
description = ""
authors = ["Dmytro Polityka <dmytro.polityka@tum.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"
SQLAlchemy = "^1.4.45"
SQLAlchemy-Utils = "^0.38.3"
psycopg2-binary = "^2.9.5"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
sqlalchemy-stubs = "^0.4"
types-sqlalchemy-utils = "^1.0.1"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
implicit_reexport = true
no_warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["pandas"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sqlalchemy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sqlalchemy_utils.*"
ignore_missing_imports = true